--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
-    "@mui/material": "^6.4.3",
+    "@mui/material": "^6.4.4",
     "@mui/styles": "^6.4.3",
-    "ag-grid-community": "^33.0.4",
-    "ag-grid-react": "^33.0.4",
+    "ag-grid-community": "^33.1.0",
+    "ag-grid-react": "^33.1.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "material-dashboard-2-react": "github:creativetimofficial/material-dashboard-react",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
